@@ -36,11 +36,13 @@ do_about_dialog(void)
    static GtkWidget *dialog;
    if (!dialog)
      {
-       const gchar* authors[] = {"Maurits Rijk (m.rijk@chello.nl)", NULL};
+       const gchar *authors[]     = { "Maurits Rijk (m.rijk@chello.nl)", NULL };
+       const gchar *property_name = (gtk_check_version (2, 12, 0) ?
+                                     "program-name" : "name");
 
        dialog = g_object_new (GTK_TYPE_ABOUT_DIALOG,
                               "transient-for", get_dialog(),
-                              "name",    _("Image Map Plug-In"),
+                              property_name, _("Image Map Plug-In"),
                               "version", "2.3",
                               "authors", authors,
                               "copyright",
