@@ -1,3 +1,8 @@
+2008-01-23  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/imagemap/imap_about.c: check for the GTK+ version and
+	adjust the property name accordingly.
+
 2008-01-22  Sven Neumann  <sven@gimp.org>
 
 	Merged from trunk:
